# ttopt

./: .gitmodules  CMakeLists.txt  _dct_table.aig  blif2verilog2.py  build.sh  conv.py  dct.blif  dct.blif.abc.blif  dct.blif.ttopt.blif  dct.old.blif  dct.pla  dct.v  dct_fx.blif  dct_fx.blif.abc.blif  dct_fx_st.v  dct_sop_fx.blif  dct_sop_fx.blif.abc.blif  downloadfbdd.sh  eval.sh  expand.py  fixblif.py  part.py  postsynth.sh  prepare.sh  run.sh  run_cudd.sh  run_node.sh  run_table.sh  runfbdd.sh  runfbddlayer.sh  runmfs2if.sh  runmfs2if_fx.sh  synthesis.py
esp/: GeneratePLA.cpp  main.cpp
src/: Bdd.cpp  BinaryToString.cpp  HashPair.hpp  Pla.cpp  ReadBlif.cpp  ReadSim.cpp  TruthTable.cpp  TruthTable2.cpp  main.cpp
verilog/: dct_sop_fx.v
